--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "createpackage",
+  "name": "schneidertestproject",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/cjs/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "yarn build:esm && yarn build:cjs",
+"build:esm": "tsc",
+"build:cjs": "tsc --module commonjs --outDir dist/cjs"
   },
   "keywords": [],
   "author": "dileep",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/react": "^18.2.21",
     "react": "^18.2.0",
