--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "schneidertestproject",
+  "name": "schneidertestprojects",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/cjs/index.js",
