--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "schneidertest",
   "version": "1.0.1",
   "description": "",
-  "main": "./dist/cjs/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
